--- a/f5_sphinx_theme/layout.html
+++ b/f5_sphinx_theme/layout.html
@@ -25,6 +25,7 @@
 -->
 <link href="https://cdn.f5.com/favicon.ico" rel="icon">
 <script src="https://use.fontawesome.com/21fb8a09c3.js"></script>
+<script type="text/javascript" src="static/js/redirect-from-rtd.js"></script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
