--- a/f5_sphinx_theme/globaltoc.html
+++ b/f5_sphinx_theme/globaltoc.html
@@ -14,4 +14,9 @@
  limitations under the License.
 #}
 
-{{ toctree(includehidden=True) }}
+<p class="caption" data-toggle="collapse" data-target="toc">
+ <span class="caption-text">Site Contents</span>
+</p>
+<div id="toc">
+  {{ toctree(includehidden=True) }}
+</div>
