--- a/f5_sphinx_theme/globaltoc.html
+++ b/f5_sphinx_theme/globaltoc.html
@@ -14,9 +14,8 @@
  limitations under the License.
 #}
 
-<p class="caption" data-toggle="collapse" data-target="toc">
- <span class="caption-text">Site Contents</span>
+<p><span class="caption-text">Site Contents</span>
 </p>
 <div id="toc">
-  {{ toctree(includehidden=True) }}
+  {{ toctree(includehidden=True, collapse=True) }}
 </div>
