--- a/f5_sphinx_theme/layout.html
+++ b/f5_sphinx_theme/layout.html
@@ -55,7 +55,7 @@
       </div>
       <div class="col-md-offset-3 col-sm-offset-3 main">
         <h4>
-          <a href="/">{{ theme_site_name|striptags|e }}</a> &gt; <a href="{{ pathto(master_doc) }}">{{ project|striptags|e }}</a>
+          <a href="{{ base_url|striptags|e }}/">{{ theme_site_name|striptags|e }}</a> &gt; <a href="{{ pathto(master_doc) }}">{{ project|striptags|e }}</a>
           <span class="right"><a href="{{ pathto('genindex')}}">Index</a></span>
         </h4>
         {% block body %}{% endblock %}
