--- a/f5_sphinx_theme/layout.html
+++ b/f5_sphinx_theme/layout.html
@@ -5,28 +5,7 @@
 {# set script_files = script_files + ["https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js", "_static/js/bootstrap.min.js"] #}
 
 {%- block extrahead %}
-<!--
-# Copyright 2017 F5 Networks
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
--->
-<link href="https://cdn.f5.com/favicon.ico" rel="icon">
-<script src="https://use.fontawesome.com/21fb8a09c3.js"></script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+  {% include "head.html" %}
 {%- endblock %}
 
 {# Do not create the standard relbars and sidebars #}
@@ -41,7 +20,7 @@
 
 {% block content %}
   <div class="container-fluid">
-    <div class="row">
+    <div class="row d-flex">
       <div class="col-sm-3 col-md-3 sidebartoc">
          <h4><a href="{{ url_root }}">{{ project }} {{ release }}</a></h4>
         {%- if sidebars != None %}
