--- a/f5_sphinx_theme/head.html
+++ b/f5_sphinx_theme/head.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8">
   <!-- Twitter Bootstrap viewport setting -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- F5 metadata -->
   <meta name="kb_doc_type" content="Manual"/>
   <meta name="kb_doc_type" content="User Guide"/>
@@ -40,13 +40,12 @@
     <link rel="stylesheet" href="{{ pathto('_static/css/f5-theme.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/custom.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/boostrap.min.css', 1) }}" type="text/css" >
-    <link rel="stylesheet" href="https://use.fontawesome.com/21fb8a09c3.css" media="all" >
     {%- endblock %}
     
     {%- block scripts %}
     {# SCRIPTS #}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://use.fontawesome.com/21fb8a09c3.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
