--- a/f5_sphinx_theme/header.html
+++ b/f5_sphinx_theme/header.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row corp-header">
+  <div class="row corp-header" id="f5-header">
     <div class="container corp-header">
       <div class="container corp-menu">
         <ul>
@@ -12,7 +12,9 @@
       </div>
     </div>
   </div>
-
+  
+  <button type="button" class="site-expand-section-nav site-header-icon-button"><i class="fas fa-bars"></i></button>
+  
   <div class="row pageHeader">
     <div class="container stat">
       <div class="col-xs-12 stat">
