--- a/f5_sphinx_theme/globaltoc.html
+++ b/f5_sphinx_theme/globaltoc.html
@@ -1,5 +1,5 @@
 {#
- Copyright 2017 F5 Networks
+ Copyright 2017-18 F5 Networks
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -14,4 +14,4 @@
  limitations under the License.
 #}
 
-{{ toctree(includehidden=True) }}
+{{ toctree(includehidden=True, collapse=True) }}
