--- a/f5_sphinx_theme/head.html
+++ b/f5_sphinx_theme/head.html
@@ -39,6 +39,7 @@
     {# CSS #}
     <link rel="stylesheet" href="{{ pathto('_static/css/f5-theme.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/custom.css', 1) }}" type="text/css" >
+    <link rel="stylesheet" href="{{ pathto('_static/css/f5.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/boostrap.min.css', 1) }}" type="text/css" >
     {%- endblock %}
     
