--- a/f5_sphinx_theme/localtoc.html
+++ b/f5_sphinx_theme/localtoc.html
@@ -1,5 +1,5 @@
 {#
- Copyright 2017 F5 Networks
+ Copyright 2017-18 F5 Networks
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -14,9 +14,8 @@
  limitations under the License.
 #}
 
-{%- if display_toc %}
-  <p class="caption">
-   <span class="caption-text">Current Page</span>
-  </p>
-  {{ toc }}
-{%- endif %}
+<h5>Current Page</h5>
+<ul class="site-page-nav-list">
+    {{ toc }}
+ </ul>
+
