--- a/f5_sphinx_theme/searchbox.html
+++ b/f5_sphinx_theme/searchbox.html
@@ -1,23 +1,30 @@
 {#
-    basic/searchbox.html
-    ~~~~~~~~~~~~~~~~~~~~
+ Copyright 2017-18 F5 Networks
 
-    Sphinx sidebar template: quick search box.
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
 
-    :copyright: Copyright 2007-2016 by the Sphinx team, see AUTHORS.
-    :license: BSD, see LICENSE for details.
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
 #}
+
 {%- if pagename != "search" and builder != "singlehtml" %}
 <div id="searchbox" style="display: none" role="search">
-  <form class="search" action="{{ pathto('search') }}" method="get">
-    <div>
-      <input type="text" name="q" placeholder="Search" style="padding-left: 6px;"/>
-      <!-- <input type="submit" value="{{ _('Go') }}" style="margin-top: 4px;"/> -->
-      <button type="submit" class="btn btn-primary btn-xs">Go</button>
+    <div class="searchformwrapper">
+    <form class="search" action="{{ pathto('search') }}" method="get">
+      <input type="text" class="search" style="height: 28px;" name="q" placeholder="  Search..." />
+      <button type="submit" class="search" style="height: 26px;"><i class="fas fa-search"></i></button>
+      <input type="hidden" name="check_keywords" value="yes" />
+      <input type="hidden" name="area" value="default" />
+    </form>
     </div>
-    <input type="hidden" name="check_keywords" value="yes" />
-    <input type="hidden" name="area" value="default" />
-  </form>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
+
 {%- endif %}
