add scripts for GA

--- a/f5_sphinx_theme/layout.html
+++ b/f5_sphinx_theme/layout.html
@@ -105,4 +105,10 @@
         document.getElementById("sidebarNav").style.display = "none";
     }
   </script>
+
+  <!--Staging-->
+  <script type="text/javascript">_satellite.pageBottom();</script>
+  
+  <!--Production-->
+  <script type="text/javascript">_satellite.pageBottom();</script>
 {%- endblock %}
