--- a/f5_sphinx_theme/layout.html
+++ b/f5_sphinx_theme/layout.html
@@ -33,12 +33,12 @@
 <div class="site-wrapper"></div>
 
 {%- block header %}
-  {% include "header.html" %}
+  {%- include "header.html" %}
 {% endblock %}
 
 <div id="docs-wrapper" itemscope itemtype="http://schema.org/Article">
 
-{% block content %}
+{%- block content %}
 
 <div class="main-content clearfix">
   {%- if sidebars != None %}
@@ -56,7 +56,6 @@
       </span>
       </nav>
       </div>
-  
   {%- endif %}
   
   {-% block main %}
@@ -111,4 +110,4 @@
   
   <!--Production-->
   <script type="text/javascript">_satellite.pageBottom();</script>
-{%- endblock %}
+{% endblock %}
