Remove Bootstrap 3 files; Add CDN links for Bootstrap 4

--- a/f5_sphinx_theme/head.html
+++ b/f5_sphinx_theme/head.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8">
   <!-- Twitter Bootstrap viewport setting -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- F5 metadata -->
   <meta name="kb_doc_type" content="Manual"/>
   <meta name="kb_doc_type" content="User Guide"/>
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="{{ pathto('_static/css/f5-theme.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/custom.css', 1) }}" type="text/css" >
     <link rel="stylesheet" href="{{ pathto('_static/css/f5.css', 1) }}" type="text/css" >
-    <link rel="stylesheet" href="{{ pathto('_static/css/boostrap.min.css', 1) }}" type="text/css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     {%- endblock %}
     
     {%- block scripts %}
